[package]
name = "multistream-select"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
description = "Implementation of libp2p's multistream-select protocol"
documentation = "https://docs.rs/multistream-select"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["libp2p", "peer-to-peer", "tokio"]
categories = ["network-programming"]

[dependencies]
bytes = "0.4"
futures = { version = "0.1" }
log = "0.4"
smallvec = "0.6"
tokio-codec = "0.1"
tokio-io = "0.1"
unsigned-varint = { version = "0.2.1", features = ["codec"] }

[dev-dependencies]
tokio = "0.1"
tokio-tcp = "0.1"
