[package]
name = "libp2p-http"
edition = "2018"
description = "HTTP node handler for libp2p"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
atoi = "0.2.3"
bytes = "0.4"
futures = "0.1"
http = "0.1.17"
httparse = "1.3.3"
libp2p-core = { version = "0.7.0", path = "../../core" }
tokio-codec = "0.1.1"
tokio-io = "0.1.0"
