[package]
name = "libp2p-quic"
edition = "2018"
description = "QUIC transport for libp2p"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking", "quic"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bs58 = "0.2"
bytes = "0.4"
lazy_static = "1.2"
libp2p-core = { version = "0.5.0", path = "../../core" }
log = "0.4"
fnv = "1.0"
futures = "0.1"
multiaddr = { package = "parity-multiaddr", version = "0.2.0", path = "../../misc/multiaddr" }
multihash = { package = "parity-multihash", version = "0.1.0", path = "../../misc/multihash" }
openssl = "0.10.20"
parking_lot = "0.5"
quinn-proto = "0.2"
rand = "0.6"
rustls = { version = "0.15", features = ["dangerous_configuration"] }
simple_asn1 = "0.3"
smallvec = "0.6"
slog = "2.4"
tokio-executor = "0.1.6"
tokio-timer = "0.2"
tokio-udp = "0.1"
webpki = "0.19"
